<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/maintab_background_selector"
            android:button="@null"
            android:drawableTop="@drawable/maintab_icon_video_selector"
            android:gravity="center"
            android:text="@string/app_common_live"
            android:textColor="@color/fontOrange" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/maintab_background_selector"
            android:button="@null"
            android:drawableTop="@drawable/maintab_icon_video_selector"
            android:gravity="center"
            android:text="@string/app_common_program"
            android:textColor="@color/fontOrange" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/maintab_background_selector"
            android:button="@null"
            android:drawableTop="@drawable/maintab_icon_video_selector"
            android:gravity="center"
            android:text="@string/app_common_main"
            android:textColor="@color/fontOrange" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/maintab_background_selector"
            android:button="@null"
            android:drawableTop="@drawable/maintab_icon_video_selector"
            android:gravity="center"
            android:text="@string/app_common_life"
            android:textColor="@color/fontOrange" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/maintab_background_selector"
            android:button="@null"
            android:drawableTop="@drawable/maintab_icon_video_selector"
            android:gravity="center"
            android:text="@string/app_common_me"
            android:textColor="@color/fontOrange" />
    </RadioGroup>

</android.support.design.widget.CoordinatorLayout>
